# data-ops-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/dataops/: Exceptions.py  Logger.py  __init__.py  main.py  messages.py  parameters.yaml  settings.yaml
src/dataops/custom_types/: custom_types.py
src/dataops/data_manager/: dataframe.py
src/dataops/feature_engineering/: feature_engineering.py  transformers.py
src/dataops/graphs/histogram_plots/: feature_histograms.py
src/dataops/metrics/: analyzers.py  generic_metrics.py
src/dataops/models/: binary_classification.py  classification.py  model_controller.py  multiclassification.py
src/dataops/preprocessing/: correlations.py  feature_engineering.py
src/dataops/stats/: analyzers.py
src/dataops/utils/: timing.py  utils.py
src/dataops/visualization/: plotters.py
src/mlengine/: settings.yaml
src/mlengine/data_manager/: file_reader.py
src/mlengine/graphs/histogram_plots/: feature_histograms.py
tests/: main.py
tests/mlengine/data_manager/: test_file_reader.py
