[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataops"
version = "0.0.1"
dependencies = ['numpy ~= 1.23.4', 'pandas ~= 1.5.1', 'plotly~=5.11.0', 'scipy~=1.9.3', 'matplotlib~=3.6.3', 'PyYAML~=6.0', 'scikit-learn==1.3.0', 'xgboost~=1.7.6', 'coloredlogs~=15.0.1',
                'seaborn==0.12.2', 'pydantic~=2.3.0']
authors = [{ name = "Bartosz Dutka", email = "dutkabar@gmail.com" }, ]
description = "data management, statistics and machine learning library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
